# STTRE

./: .gitignore  STTRE.ipynb  STTRE.py  STTRE_OO.py  STTRE_PL.py  __init__.py  best_model_Uber.pth  debug_wrapper.sh  main.py  model.py  prepare_srun.sh  run.sh  run_notebook.slurm  setup.cfg  setup.py  srun_gpu.sh  test_gpu.slurm  test_gpu_debug.slurm  test_gpu_min.slurm  test_module.slurm
Compute/: srun_gpu.sh
DATA/: uber_stock.csv
Model/: model.py  train.py
STTRE/: __init__.py  main.py
STTRE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
STTRE/models/: data.py  dataset.py  encoder.py  main.py  model.py  train.py
_Old/: STTRE.ipynb  STTRE.py  STTRE_OO.py  STTRE_PL.py  prepare_srun.sh  run.py  test_gpu.slurm
_Old/Model/: config.py  dataset.py  utils.py
_Old/STTRE_old/: data.py  model.py
lightning_logs/sttre/version_0/: events.out.tfevents.1730341227.cfdg001.2840688.0
