[metadata]
name = STTRE
version = attr: STTRE.__version__
author = Juan Manuel Boullosa Novo
author_email = juanmanuel.boullosanovo@colorado.edu
description = Spatial-Temporal Transformer for Time Series Forecasting
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/boujuan/STTRE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.12
install_requires =
    torch>=2.0.0
    lightning>=2.0.0
    numpy
    polars
    tensorboard